# rolo

./: .gitignore  AUTHORS  CHANGELOG  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  THANKS  TODO  bootstrap  bootstrap.sh  configure.ac  data.vcf  edit.c  edit.h  help.c  help.h  index.c  index.h  main.c  rolo.spec  rolo.spec.in  rolo.spec_rh  view.c  view.h
doc/: Makefile.am  rolo.1
libvcard/: .gitignore  Makefile  README  data.vcf  test.c  vcard.c  vcard.h  vcard.l  vcard.y
mutt_vc_query/: .gitignore  ChangeLog  Makefile.am  README  main.c  result.c  result.h
src/: .gitignore  ChangeLog  Makefile.am  add.c  add.h  delete.c  delete.h  edit.c  edit.h  entry.c  entry.h  help.c  help.h  index.c  index.h  main.c  search.c  search.h  view.c  view.h
test/: Makefile.am  contacts.vcf  run-tests
vcard/: .gitignore  ChangeLog  Makefile.am  README  vc_parse.y  vc_scan.l  vcard.c  vcard.h  vcard.l  vcard.y
