## Process this file with automake to produce Makefile.in
##
## $Id: Makefile.am,v 1.6 2003/03/30 02:14:28 ahsu Rel $

SUBDIRS = vcard src doc

AUTOMAKE_OPTIONS = check-news dist-bzip2

## not sure why depcomp is not included with dist sometimes...
## this will force it to be included.
EXTRA_DIST = depcomp test/contacts.vcf rolo.spec
