## Process this file with automake to produce Makefile.in
##
## $Id: Makefile.am,v 1.7 2003/04/18 12:16:35 ahsu Rel $

SUBDIRS = vcard src mutt_vc_query doc

AUTOMAKE_OPTIONS = check-news dist-bzip2

## not sure why depcomp is not included with dist sometimes...
## this will force it to be included.
EXTRA_DIST = depcomp test/contacts.vcf rolo.spec
