## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.8 2003/05/04 12:01:32 ahsu Rel $

SUBDIRS = src doc

AUTOMAKE_OPTIONS = check-news dist-bzip2

## not sure why depcomp is not included with dist sometimes...
## this will force it to be included.
EXTRA_DIST = depcomp test/contacts.vcf rolo.spec
