## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.6 2003/03/25 11:16:54 ahsu Rel $

bin_PROGRAMS = rolo
rolo_SOURCES = main.c \
               index.c index.h \
               view.c view.h \
               edit.c edit.h \
               help.c help.h \
               delete.c delete.h \
               add.c add.h \
               entry.c entry.h
EXTRA_DIST = ChangeLog
