## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.7 2003/05/14 13:21:32 ahsu Exp $

bin_PROGRAMS = rolo
rolo_SOURCES = main.c \
               index.c index.h \
               view.c view.h \
               edit.c edit.h \
               help.c help.h \
               delete.c delete.h \
               add.c add.h \
               entry.c entry.h
